--- a/Classes/Tabs/02/PrivateView.xib
+++ b/Classes/Tabs/02/PrivateView.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A386b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PrivateView">
@@ -25,7 +26,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wIE-rZ-IuR">
+                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="wIE-rZ-IuR">
                     <rect key="frame" x="0.0" y="8" width="320" height="44"/>
                     <textInputTraits key="textInputTraits"/>
                     <connections>
@@ -34,6 +35,11 @@
                 </searchBar>
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="wIE-rZ-IuR" firstAttribute="leading" secondItem="2gc-3b-G0b" secondAttribute="leading" id="POU-pC-XA7"/>
+                <constraint firstItem="wIE-rZ-IuR" firstAttribute="top" secondItem="2gc-3b-G0b" secondAttribute="topMargin" id="SuD-hs-26N"/>
+                <constraint firstAttribute="trailing" secondItem="wIE-rZ-IuR" secondAttribute="trailing" id="siz-iQ-lQS"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
