--- a/Classes/Tabs/04/ProfileView.xib
+++ b/Classes/Tabs/04/ProfileView.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A386b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileView">
@@ -67,7 +68,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mXk-Ra-dpa">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mXk-Ra-dpa">
                         <rect key="frame" x="20" y="5" width="280" height="50"/>
                         <color key="backgroundColor" red="0.0" green="0.25098040699958801" blue="0.50196081399917603" alpha="1" colorSpace="calibratedRGB"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
@@ -85,6 +86,12 @@
                         </connections>
                     </button>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="mXk-Ra-dpa" firstAttribute="top" secondItem="dS6-jP-Okb" secondAttribute="topMargin" constant="-3" id="Gmk-c5-tLb"/>
+                    <constraint firstItem="mXk-Ra-dpa" firstAttribute="centerX" secondItem="dS6-jP-Okb" secondAttribute="centerX" id="K6o-5x-395"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="mXk-Ra-dpa" secondAttribute="bottom" constant="-4" id="d4r-GL-hRj"/>
+                    <constraint firstItem="mXk-Ra-dpa" firstAttribute="leading" secondItem="dS6-jP-Okb" secondAttribute="leadingMargin" constant="12" id="ptG-hR-dt2"/>
+                </constraints>
             </tableViewCellContentView>
         </tableViewCell>
     </objects>
