--- a/Classes/Tabs/03/MessagesView.xib
+++ b/Classes/Tabs/03/MessagesView.xib
@@ -28,14 +28,22 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ske-MY-c8q">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <subviews>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="No messages at the moment" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EQG-9D-pil">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No messages at the moment" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EQG-9D-pil">
                             <rect key="frame" x="0.0" y="100" width="320" height="21"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="21" id="Kh2-Y5-6qX"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="EQG-9D-pil" firstAttribute="top" secondItem="ske-MY-c8q" secondAttribute="top" constant="100" id="9af-Va-d9z"/>
+                        <constraint firstAttribute="centerX" secondItem="EQG-9D-pil" secondAttribute="centerX" id="eLd-Hq-fqr"/>
+                        <constraint firstItem="EQG-9D-pil" firstAttribute="leading" secondItem="ske-MY-c8q" secondAttribute="leading" id="wsb-AP-kpV"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
