--- a/Classes/Tabs/02/PrivateView.xib
+++ b/Classes/Tabs/02/PrivateView.xib
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PrivateView">
             <connections>
-                <outlet property="searchBar1" destination="wIE-rZ-IuR" id="MVq-vT-0yi"/>
+                <outlet property="searchBar" destination="wIE-rZ-IuR" id="yRk-9a-ht3"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="viewHeader" destination="2gc-3b-G0b" id="8Ec-Hp-g9C"/>
             </connections>
@@ -23,11 +22,11 @@
             </connections>
         </tableView>
         <view contentMode="scaleToFill" id="2gc-3b-G0b">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="wIE-rZ-IuR">
-                    <rect key="frame" x="0.0" y="8" width="320" height="44"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                     <textInputTraits key="textInputTraits"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="8kO-qe-6Fg"/>
@@ -36,9 +35,9 @@
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <constraints>
-                <constraint firstItem="wIE-rZ-IuR" firstAttribute="leading" secondItem="2gc-3b-G0b" secondAttribute="leading" id="POU-pC-XA7"/>
-                <constraint firstItem="wIE-rZ-IuR" firstAttribute="top" secondItem="2gc-3b-G0b" secondAttribute="topMargin" id="SuD-hs-26N"/>
-                <constraint firstAttribute="trailing" secondItem="wIE-rZ-IuR" secondAttribute="trailing" id="siz-iQ-lQS"/>
+                <constraint firstItem="wIE-rZ-IuR" firstAttribute="leading" secondItem="2gc-3b-G0b" secondAttribute="leading" id="B3Y-CC-HCf"/>
+                <constraint firstAttribute="trailing" secondItem="wIE-rZ-IuR" secondAttribute="trailing" id="JBO-te-1kB"/>
+                <constraint firstItem="wIE-rZ-IuR" firstAttribute="top" secondItem="2gc-3b-G0b" secondAttribute="top" id="OxB-yX-Gf7"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
