--- a/Classes/User/LoginView.xib
+++ b/Classes/User/LoginView.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -33,7 +33,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wiw-WP-O7Z">
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wiw-WP-O7Z">
                         <rect key="frame" x="15" y="0.0" width="290" height="60"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                         <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next"/>
@@ -42,6 +42,12 @@
                         </connections>
                     </textField>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="centerX" secondItem="wiw-WP-O7Z" secondAttribute="centerX" id="DmJ-LD-uhF"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="wiw-WP-O7Z" secondAttribute="bottom" constant="-9" id="c6C-66-DbG"/>
+                    <constraint firstItem="wiw-WP-O7Z" firstAttribute="leading" secondItem="kWY-Rb-Xwx" secondAttribute="leadingMargin" constant="7" id="rEw-pE-qga"/>
+                    <constraint firstItem="wiw-WP-O7Z" firstAttribute="top" secondItem="kWY-Rb-Xwx" secondAttribute="top" id="tla-6z-HzF"/>
+                </constraints>
             </tableViewCellContentView>
         </tableViewCell>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="n5g-Gd-0J5">
@@ -51,7 +57,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OZ7-2i-VuJ">
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OZ7-2i-VuJ">
                         <rect key="frame" x="15" y="0.0" width="290" height="60"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                         <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done"/>
@@ -60,6 +66,12 @@
                         </connections>
                     </textField>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="centerX" secondItem="OZ7-2i-VuJ" secondAttribute="centerX" id="UO7-La-jrw"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="OZ7-2i-VuJ" secondAttribute="bottom" constant="-9" id="kn1-OZ-AAK"/>
+                    <constraint firstItem="OZ7-2i-VuJ" firstAttribute="top" secondItem="7jJ-MM-3QG" secondAttribute="top" id="vCQ-8U-3eY"/>
+                    <constraint firstItem="OZ7-2i-VuJ" firstAttribute="leading" secondItem="7jJ-MM-3QG" secondAttribute="leadingMargin" constant="7" id="xCw-BH-z1b"/>
+                </constraints>
             </tableViewCellContentView>
         </tableViewCell>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="mvy-mU-pAm">
