--- a/Classes/User/RegisterView.xib
+++ b/Classes/User/RegisterView.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -33,7 +33,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wiw-WP-O7Z">
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wiw-WP-O7Z">
                         <rect key="frame" x="15" y="0.0" width="290" height="60"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="next"/>
@@ -42,6 +42,12 @@
                         </connections>
                     </textField>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailingMargin" secondItem="wiw-WP-O7Z" secondAttribute="trailing" constant="7" id="4Vh-Jq-LDr"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="wiw-WP-O7Z" secondAttribute="bottom" constant="-9" id="IoP-mt-WcL"/>
+                    <constraint firstItem="wiw-WP-O7Z" firstAttribute="top" secondItem="kWY-Rb-Xwx" secondAttribute="top" id="QKi-ta-eQd"/>
+                    <constraint firstItem="wiw-WP-O7Z" firstAttribute="centerX" secondItem="kWY-Rb-Xwx" secondAttribute="centerX" id="ia4-lO-6KO"/>
+                </constraints>
             </tableViewCellContentView>
         </tableViewCell>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="n5g-Gd-0J5">
@@ -51,7 +57,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OZ7-2i-VuJ">
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OZ7-2i-VuJ">
                         <rect key="frame" x="15" y="0.0" width="290" height="60"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                         <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done"/>
@@ -60,6 +66,12 @@
                         </connections>
                     </textField>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="OZ7-2i-VuJ" firstAttribute="top" secondItem="7jJ-MM-3QG" secondAttribute="top" id="DH9-1N-Alf"/>
+                    <constraint firstItem="OZ7-2i-VuJ" firstAttribute="centerX" secondItem="7jJ-MM-3QG" secondAttribute="centerX" id="R78-zX-PVq"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="OZ7-2i-VuJ" secondAttribute="bottom" constant="-9" id="jca-DB-6Py"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="OZ7-2i-VuJ" secondAttribute="trailing" constant="7" id="vHv-08-668"/>
+                </constraints>
             </tableViewCellContentView>
         </tableViewCell>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -70,7 +82,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V6V-YD-OAr">
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V6V-YD-OAr">
                         <rect key="frame" x="15" y="0.0" width="290" height="60"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                         <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next"/>
@@ -79,6 +91,12 @@
                         </connections>
                     </textField>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="V6V-YD-OAr" firstAttribute="centerX" secondItem="fuJ-o0-WoK" secondAttribute="centerX" id="8Ls-Vd-yld"/>
+                    <constraint firstItem="V6V-YD-OAr" firstAttribute="top" secondItem="fuJ-o0-WoK" secondAttribute="top" id="gSa-Ec-d3I"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="V6V-YD-OAr" secondAttribute="bottom" constant="-9" id="jNY-Lf-DwE"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="V6V-YD-OAr" secondAttribute="trailing" constant="7" id="tQc-Aa-EYU"/>
+                </constraints>
             </tableViewCellContentView>
         </tableViewCell>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="Wd0-et-tSf">
